--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="bg_heart">
         <div class="container-fluid contenedor_main">
             <div class="caja">
-                <h1>¿Pregunta aquí estará?</h1>
+                <h1>¿Quieres ser mi novia?</h1>
                 <div class="contenedor_preguntas">
                     <a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="si">Si <i class="fas fa-heart"></i></a>
                     <a data-fancybox data-animation-duration="700" data-src="#animatedModalDos" href="javascript:;" class="no">No <i class="far fa-frown"></i></a>
