--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div style="display: none;" id="animatedModal" class="animated-modal">
                     <h2 class="text-center mb-4">Te amo infinitamente Leticia <i class="fas fa-heart"></i></h2>
-                    <p class="my-3 text-center">Prometo hacerte feliz, gracias por darme esta oportunidad.</p>
+                    <p class="my-3 text-center">Prometo hacerles felices, gracias por darme esta oportunidad.</p>
                     <iframe height="315" src="https://www.youtube.com/embed/IwJqLygPXDM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div style="display: none;" id="animatedModalDos" class="animated-modal">
