--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a data-fancybox data-animation-duration="700" data-src="#animatedModalDos" href="javascript:;" class="no">No <i class="far fa-frown"></i></a>
                 </div>
                 <div style="display: none;" id="animatedModal" class="animated-modal">
-                    <h2 class="text-center mb-4">Te amo infinitamente Leticia <i class="fas fa-heart"></i></h2>
+                    <h2 class="text-center mb-4">Te amo infinitamente María (osita) <i class="fas fa-heart"></i></h2>
                     <p class="my-3 text-center">Prometo hacerles felices, gracias por darme esta oportunidad.</p>
                     <iframe height="315" src="https://www.youtube.com/embed/IwJqLygPXDM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
