--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
             <!-- Corazones de fondo se generarán con JS -->
         </div>
         <h1>Para el Amor de Mi Vida</h1>
-        <p>Una página creada con todo mi cariño para ti</p>
+        <h2>Te amo María Trejo</h2>
+        <p>No dejemos de sorprendernos</p>
         <div class="hearts">❤️ ❤️ ❤️</div>
     </header>
 
@@ -286,7 +287,7 @@
         <div class="gallery">
             <!-- Las fotos se pueden reemplazar por las tuyas -->
             <div class="photo">
-                <img src="https://images.unsplash.com/photo-1516589178581-6cd7833ae3b2?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Pareja feliz">
+                <img src="https://photos.google.com/u/0/share/AF1QipPkOl0K48vm9-IhMFVP4NZg0bOW0fqW4Tf8Ivq7YCh_JEovCD01erjPDofqHCO35Q/photo/AF1QipP5nQj2D5uWhDuhQ56HIUW3B5AgVUYjMHPo-Pgk?key=S3psUDd4UnEtQnNldlZXUjVhLTNTbVo4clljdS1R" alt="Pareja feliz">
             </div>
             <div class="photo">
                 <img src="https://images.unsplash.com/photo-1529333166437-7750a6dd5a70?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Pareja en la playa">
@@ -338,7 +339,7 @@
     </section>
 
     <footer>
-        <p>Hecho con ❤️ por [Tu Nombre] para [Su Nombre]</p>
+        <p>Hecho con ❤️ por Jesús González para María Trejo (mi osita)</p>
         <p>© <span id="year"></span> - Todos los derechos reservados (el derecho a amarte por siempre)</p>
     </footer>
 
