--- a/index.html
+++ b/index.html
@@ -268,41 +268,48 @@
         <div class="heart-bg">
             <!-- Corazones de fondo se generarán con JS -->
         </div>
-        <h1>Para el Amor de Mi Vida</h1>
-        <h2>Te amo María Trejo</h2>
-        <p>No dejemos de sorprendernos</p>
+        <h1>Para el Amor de Mi Vida: María Trejo (mi osita)</h1>
         <div class="hearts">❤️ ❤️ ❤️</div>
     </header>
 
     <section id="our-story">
         <h2><i class="fas fa-book-open"></i> Nuestra Historia</h2>
         <p>Desde el primer momento que te vi, supe que eras alguien especial. Cada día a tu lado es un regalo que atesoro con todo mi corazón.</p>
-        <p>Recuerdo nuestra primera cita, esos nervios que se convertían en risas, las miradas cómplices y cómo el tiempo volaba cuando estábamos juntos.</p>
-        <p>Esta página es solo un pequeño reflejo de todo lo que siento por ti, porque las palabras a veces no bastan para expresar lo que mi corazón siente.</p>
+        <p>Recuerdo nuestra primera cita ese sábado 17 de mayo, esos nervios que se convertían en risas, las miradas cómplices y cómo el tiempo volaba cuando estábamos juntos.</p>
+        <p>Esta detalle es solo un pequeño reflejo de todo lo que siento por ti, porque las palabras a veces no bastan para expresar lo que mi corazón siente.</p>
     </section>
 
     <section id="gallery">
         <h2><i class="fas fa-camera"></i> Nuestros Momentos</h2>
-        <p>Algunos de los recuerdos más bonitos que guardo en mi corazón:</p>
+        <p>Algunos de los recuerdos más bonitos que guardo en mi corazón (<i>debemos recrear más</i>):</p>
         <div class="gallery">
             <!-- Las fotos se pueden reemplazar por las tuyas -->
             <div class="photo">
-                <img src="https://photos.google.com/u/0/share/AF1QipPkOl0K48vm9-IhMFVP4NZg0bOW0fqW4Tf8Ivq7YCh_JEovCD01erjPDofqHCO35Q/photo/AF1QipP5nQj2D5uWhDuhQ56HIUW3B5AgVUYjMHPo-Pgk?key=S3psUDd4UnEtQnNldlZXUjVhLTNTbVo4clljdS1R" alt="Pareja feliz">
+                <img src="https://i.postimg.cc/W12fxzzr/IMG-20250612-181159.jpg" alt="te amo trejo">
             </div>
             <div class="photo">
-                <img src="https://images.unsplash.com/photo-1529333166437-7750a6dd5a70?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Pareja en la playa">
+                <img src="https://i.postimg.cc/sxdTmDbM/IMG-20250515-WA0000-1.jpg" alt="te amo trejo">
             </div>
             <div class="photo">
-                <img src="https://images.unsplash.com/photo-1518199266791-5375a83190b7?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Pareja abrazada">
+                <img src="https://i.postimg.cc/5yBnRWMn/IMG-20250603-WA0084.jpg" alt="te amo trejo">
             </div>
             <div class="photo">
-                <img src="https://images.unsplash.com/photo-1530968464165-7e0a96b95b05?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Pareja en la montaña">
+                <img src="https://i.postimg.cc/KcBqzBgB/IMG-20250712-WA0000-2.jpg" alt="te amo trejo">
             </div>
             <div class="photo">
-                <img src="https://images.unsplash.com/photo-1518621736915-f3b1c41bfd00?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Pareja riendo">
+                <img src="https://i.postimg.cc/nLrScWvh/IMG-20250612-182130.jpg" alt="te amo trejo">
             </div>
             <div class="photo">
-                <img src="https://images.unsplash.com/photo-1529257414772-1960b7bea4eb?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Pareja en atardecer">
+                <img src="https://i.postimg.cc/hj7CV7ZF/IMG-20250612-182139.jpg" alt="te amo trejo">
+            </div>
+            <div class="photo">
+                <img src="https://i.postimg.cc/0ycHvvK4/IMG-20250612-182312.jpg" alt="te amo trejo">
+            </div>
+            <div class="photo">
+                <img src="https://i.postimg.cc/ZqQ79LcF/IMG-20250612-182315.jpg" alt="te amo trejo">
+            </div>
+            <div class="photo">
+                <img src="https://i.postimg.cc/wTzWsMhP/IMG-20250612-182330.jpg" alt="te amo trejo">
             </div>
         </div>
     </section>
@@ -332,9 +339,9 @@
 
     <section id="music">
         <h2><i class="fas fa-music"></i> Nuestra Canción</h2>
-        <p>La melodía que siempre me recuerda a ti:</p>
+        <p>Hay tantas canciones que me recuerdan a ti, pero creo que esta es la más especial:</p>
         <div class="music-player">
-            <button class="music-btn" id="play-music"><i class="fas fa-play"></i> Reproducir Canción</button>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0mAGeks6ns4FZWBPkjD9HR?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </section>
 
@@ -363,7 +370,7 @@
             musicBtn.addEventListener('click', function() {
                 if (!audio) {
                     // Cambia este enlace por tu canción especial
-                    audio = new Audio('https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3');
+                    audio = new Audio('https://open.spotify.com/intl-es/track/0mAGeks6ns4FZWBPkjD9HR?si=ec02754d2aa34df4');
                     audio.play();
                     musicBtn.innerHTML = '<i class="fas fa-pause"></i> Pausar Canción';
                 } else if (audio.paused) {
