--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     </section>
 
     <section id="messages">
-        <h2><i class="fas fa-heart"></i> Mensajes Especiales</h2>
+        <h2><i class="fas fa-heart"></i> Te amo tanto</h2>
         <div class="messages">
             <div class="message">
                 <p>"Eres la razón por la que mi corazón late más fuerte cada día. Tu sonrisa ilumina mis días oscuros y tu amor me da fuerzas para ser mejor."</p>
